Corrigido problema com colunas de id em tabelas complexas